--- a/s3_website.yml
+++ b/s3_website.yml
@@ -1,7 +1,6 @@
 s3_id: <%= ENV['AWSKeyID'] %>
 s3_secret: <%= ENV['AWSSecretKey'] %>
-s3_bucket: build.goaia.org
+s3_bucket: sportsperformance.goaia.org
 ignore_on_server: _DELETE_NOTHING_ON_THE_S3_BUCKET_
 exclude_from_upload:
-  - (css|fonts|images|js)
   - postbuild.sh
