--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,11 @@ after_success:
   - bash postbuild.sh
   - s3_website push
 notifications:
-    slack: aiacc:DQJx1jxSipYMHzXBVtf4kMGH
+    slack: 
+      rooms:
+      - aiacc:DQJx1jxSipYMHzXBVtf4kMGH
+      on_success: change # default: always
+      on_failure: always # default: always
 env:
   global:
   - NOKOGIRI_USE_SYSTEM_LIBRARIES=true # speeds up installation of html-proofer
