--- a/.forestry/front_matter/templates/page-builder.yml
+++ b/.forestry/front_matter/templates/page-builder.yml
@@ -1,5 +1,23 @@
 ---
-label: Page Builder
-hide_body: false
+label: page-builder
+hide_body: true
 is_partial: false
-fields: []
+fields:
+- type: text
+  label: Title
+  name: title
+- type: text
+  name: layout
+  label: Layout
+  hidden: true
+  default: blocks
+- type: datetime
+  name: date
+  label: Date
+- type: blocks
+  name: page_sections
+  label: Page Sections
+  template_types:
+  - text
+pages:
+- index.md
