--- a/.forestry/front_matter/templates/resources.yml
+++ b/.forestry/front_matter/templates/resources.yml
@@ -22,7 +22,7 @@ fields:
   config:
     wysiwyg: true
     schema:
-      format: markdown
+      format: html
 - type: file
   label: Featured Image
   name: featured_image
