--- a/.forestry/front_matter/templates/home-page-builder.yml
+++ b/.forestry/front_matter/templates/home-page-builder.yml
@@ -19,6 +19,7 @@ fields:
   - social-callout
   - video-callout
   - resources-general
+  - text-centered
 - type: text
   name: layout
   label: Layout
