--- a/.forestry/front_matter/templates/page-builder.yml
+++ b/.forestry/front_matter/templates/page-builder.yml
@@ -31,6 +31,7 @@ fields:
   - social-callout
   - teamblogs
   - text
+  - text-centered
 pages:
 - join-our-staff.md
 - professional-opportunities.md
