--- a/s3_website.yml
+++ b/s3_website.yml
@@ -1,6 +1,13 @@
 s3_id: <%= ENV['AWSKeyID'] %>
 s3_secret: <%= ENV['AWSSecretKey'] %>
-s3_bucket: sportsperformance.goaia.org
+s3_bucket: build.goaia.org
 ignore_on_server: _DELETE_NOTHING_ON_THE_S3_BUCKET_
+cache_control: public, no-transform, max-age=1200, s-maxage=1200
 exclude_from_upload:
   - postbuild.sh
+  - css
+  - fonts
+  - images
+  - js 
+cloudfront_distribution_id: E1YS1QL3Q5IHPW
+cloudfront_wildcard_invalidation: true
