--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ install: gem install ruby_dep -v 1.3.1 && gem install listen -v 3.0.8 && gem ins
 script: jekyll build
 after_success: 
   - bash postbuild.sh
-  - s3_website push
+  - s3_website push --dry-run
 notifications:
     slack: 
       rooms:
