opportunities call-out

--- a/.forestry/front_matter/templates/home-page-builder.yml
+++ b/.forestry/front_matter/templates/home-page-builder.yml
@@ -20,6 +20,7 @@ fields:
   - video-callout
   - resources-general
   - text-centered
+  - opportunities
 - type: text
   name: layout
   label: Layout
