--- a/.forestry/front_matter/templates/page-builder.yml
+++ b/.forestry/front_matter/templates/page-builder.yml
@@ -32,6 +32,7 @@ fields:
   - teamblogs
   - text
   - text-centered
+  - opportunities
 pages:
 - international-coaches-academy.md
 - get-involved.md
