devos and quote work

--- a/.forestry/front_matter/templates/home-page-builder.yml
+++ b/.forestry/front_matter/templates/home-page-builder.yml
@@ -21,6 +21,7 @@ fields:
   - video-callout
   - resources-general
   - text-centered
+  - quote-rotator
 - type: text
   name: layout
   label: Layout
