Social Image Update

--- a/.forestry/front_matter/templates/page-builder.yml
+++ b/.forestry/front_matter/templates/page-builder.yml
@@ -20,6 +20,10 @@ fields:
 - type: text
   label: URL
   name: permalink
+- type: file
+  name: social_image
+  label: Social Image
+  description: Image to appear when shared (1080 X 516)
 - type: blocks
   name: page_sections
   label: Page Sections
