--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 language: ruby
 rvm:
 - 2.1
+jdk: oraclejdk8
 cache: bundler
 install: gem install s3_website && bundle install
 script: jekyll build
